tests/baselines/reference/privacyCheckTypeOfFunction.errors.txt
==== tests/cases/compiler/privacyCheckTypeOfFunction.ts (2 errors) ====
    function foo() {
    }
    export var x: typeof foo;
               ~
!!! error TS4025: Exported variable 'x' has or is using private name 'foo'.
    export var b = foo;
               ~
!!! error TS4025: Exported variable 'b' has or is using private name 'foo'.
    